@@ -22,6 +22,7 @@
     * 4296 mssql_databases: new check which monitors the auto close and shrink state of MSSQL databases...
     * 4215 hp_webmgmt_status: Now also displays device model and serial number
     * 4332 check_http: Add support for TLSv1.1 and TLSv1.2 as configuration option...
+    * 4334 mssql_instance: now the connection status is configurable
     * 4171 FIX: perle_psmu: fixed value error...
     * 4172 FIX: smart.temp: fixed discovery and check function...
     * 4173 FIX: if.include: ignore some more keys in 'Network interfaces and switch ports' rule which are only used for interface grouping
